# ethiopian-women-health-chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
backend/: main.py
backend/app/: config.py
backend/app/db/: models.py  supabase_client.py
backend/app/rag/: graph.py  indexer.py
backend/app/routers/: auth.py  chat.py
backend/app/tests/: test_chat.py
frontend/app/: layout.tsx  page.tsx
frontend/app/help/: page.ts
frontend/app/history/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: AuthForm.tsx  ChatInterface.tsx  NavBar.tsx
