[project]
name = "ethiopian-women-health-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.117.1",
    "langgraph>=0.6.7",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
    "sqlalchemy>=2.0.43",
    "supabase>=2.19.0",
    "uvicorn>=0.36.0",
]
