[project]
name = "ethiopian-women-health-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.117.1",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.7",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "radis>=0.16.3",
    "redis>=6.4.0",
    "ruff>=0.13.1",
    "sqlalchemy>=2.0.43",
    "supabase>=2.19.0",
    "uvicorn>=0.36.0",
]
